# sports_engine

./: .gitignore  Build.bat  CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert
cmake/: Dependencies.cmake
src/: main.cpp
src/Core/: Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp  Types.hpp
src/Game/: AIPlayer.cpp  AIPlayer.hpp  Ball.cpp  Ball.hpp  Match.cpp  Match.hpp  Player.cpp  Player.hpp
src/Input/: InputHandler.cpp  InputHandler.hpp
src/Physics/: BallPhysics.cpp  BallPhysics.hpp
src/Renderer/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Primitives.cpp  Primitives.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
tests/: CMakeLists.txt  placeholder_test.cpp
